Sprint 5: Adicionando Swagger para testar os endpoints